--- a/apps/web/src/components/Header.astro
+++ b/apps/web/src/components/Header.astro
@@ -8,6 +8,5 @@ import {css} from "../../styled-system/css"
 <header className={center()}>
     <Image src={profil} 
     alt="Hey"
-    className={css({w: 100})}/>
-    
+    className={css({w: 85, mt: '2%'})}/>
 <header />
