--- a/apps/web/src/layouts/Layout.astro
+++ b/apps/web/src/layouts/Layout.astro
@@ -13,7 +13,8 @@ import "../index.css"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>test</title>
 	</head>
-	<body class={css({bg: '#131418'})}>
+	<body class={css({bg: '#131418',
+                        mx:'5%'})}>
         <Header/>
 		<slot />
 	</body>
