add page page for blog

--- a/apps/web/src/components/Header.astro
+++ b/apps/web/src/components/Header.astro
@@ -6,7 +6,10 @@ import {css} from "../../styled-system/css"
 ---
 
 <header className={center()}>
-    <Image src={profil} 
-    alt="Hey"
-    className={css({w: 85, mt: '2%'})}/>
+    <a href="/" class={css({pt:'2%'})}>
+        <Image src={profil} 
+            alt="Hey"
+            class={css({w: 85})}
+        />
+    </a>
 <header />
