--- a/apps/web/src/components/ListBlog.astro
+++ b/apps/web/src/components/ListBlog.astro
@@ -5,15 +5,13 @@ import {css} from "../../styled-system/css"
 
 <div class={grid({ columns:'2',
                 color:'white',
-                gap: 0,
                 justifyItems:'center',
-                justifyContent:'center',
                 })}>   
     
-    <div class={container({
+    <a href="/blog/" class={container({
         textAlign:'center',
-        mx: '20.5%',
-        py: '1.7%',
+        mx: '16.5%',
+        py: '2.1%',
         my: '7%',
         bg: '#0E0E0E',
         borderRadius: 'md'
@@ -32,13 +30,13 @@ import {css} from "../../styled-system/css"
             Breaking it down and developing versions that are interoperable
             with their code is one of the great goals of the reverse engineering world.
         </p>
-    </div>
+    </a>
 
      
-    <div class={container({
+    <a href="" class={container({
         textAlign:'center',
-        mx: '20.5%',
-        py: '1.7%',
+        mx: '16.5%',
+        py: '2.1%',
         my: '7%',
         bg: '#0E0E0E',
         borderRadius: 'md'
@@ -57,12 +55,12 @@ import {css} from "../../styled-system/css"
             Breaking it down and developing versions that are interoperable
             with their code is one of the great goals of the reverse engineering world.
         </p>
-    </div>
+    </a>
 
-    <div class={container({
+    <a href="" class={container({
         textAlign:'center',
-        mx: '20.5%',
-        py: '1.7%',
+        mx: '16.5%',
+        py: '2.1%',
         my: '7%',
         bg: '#0E0E0E',
         borderRadius: 'md'
@@ -81,13 +79,13 @@ import {css} from "../../styled-system/css"
             Breaking it down and developing versions that are interoperable
             with their code is one of the great goals of the reverse engineering world.
         </p>
-    </div>
+    </a>
 
      
-    <div class={container({
+    <a href="" class={container({
         textAlign:'center',
-        mx: '20.5%',
-        py: '1.7%',
+        mx: '16.5%',
+        py: '2.1%',
         my: '7%',
         bg: '#0E0E0E',
         borderRadius: 'md'
@@ -106,4 +104,5 @@ import {css} from "../../styled-system/css"
             Breaking it down and developing versions that are interoperable
             with their code is one of the great goals of the reverse engineering world.
         </p>
-    </div></div>
+    </a>
+</div>
