--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -1,1 +1,18 @@
 @layer reset, base, tokens, recipes, utilities;
+@layer base {
+  h1 {
+    font-size: 36px;
+  }
+
+  h2 {
+    font-size: 32px;
+  }
+
+  h3 {
+    font-size: 26px;
+  }
+
+  h4 {
+    font-size: 22px;
+  }
+}
