--- a/apps/web/src/layouts/Layout.astro
+++ b/apps/web/src/layouts/Layout.astro
@@ -14,8 +14,7 @@ import "../index.css"
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 		<title>test</title>
 	</head>
-	<body class={css({bg: '#131418',
-                        mx:'8%'})}>
+	<body class={css({mx:'8%'})}>
         <Header/>
 		<slot />
         <Last/>
