--- a/apps/web/src/components/Last.astro
+++ b/apps/web/src/components/Last.astro
@@ -2,7 +2,14 @@
 import {css} from '../../styled-system/css'
 ---
 
-<div class={css({textAlign:'center', my: '1%'})}>
+<div class={css({textAlign:'center', 
+                my: '1%',
+                position: 'relative',
+                left:0,
+                right:0,
+                ml: 'auto',
+                mr: 'auto',
+                bottom: 1})}>
     <p class={css({color:'#839192'})}>
         Designed and coded by Dar_rius
     </p>
