--- a/apps/web/src/index.css
+++ b/apps/web/src/index.css
@@ -15,4 +15,24 @@
   h4 {
     font-size: 22px;
   }
+
+  button {
+    background-color: #7b3a98;
+    margin-top: 1%;
+    padding: 1%;
+    padding-left: 5%;
+    padding-right: 5%;
+    font-weight: 600;
+    border-radius: 20px;
+  }
+
+  input {
+    padding-top: 13px;
+    padding-bottom: 13px;
+    border-radius: 10px;
+    background-color: #242525;
+    padding-left: 15px;
+    padding-right: 15px;
+    width: 100%;
+  }
 }
