--- a/apps/web/src/layouts/AdminLayout.astro
+++ b/apps/web/src/layouts/AdminLayout.astro
@@ -1,6 +1,5 @@
 ---
-import Header from "../components/Header.astro"
-import Last from "../components/Last.astro"
+import AdminHeader from "../components/AdminHeader.astro"
 import {css} from "../../styled-system/css"
 import "../index.css"
 ---
@@ -15,6 +14,7 @@ import "../index.css"
 		<title>test</title>
 	</head>
 	<body class={css({mx:'8%'})}>
+        <AdminHeader/>
 		<slot />
 	</body>
 </html>
