--- a/apps/web/src/components/AdminHeader.astro
+++ b/apps/web/src/components/AdminHeader.astro
@@ -15,7 +15,7 @@ const linkStyle = css({
         my: 10,
         mb: 17
         })}>
-    <a href="" class={linkStyle}>Home</a>
-    <a href="" class={linkStyle}>New account</a>
-    <a href="" class={linkStyle}>Edit</a>
+    <a href="/" class={linkStyle}>Home</a>
+    <a href="/admin/auth/signup" class={linkStyle}>New account</a>
+    <a href="/admin/edit" class={linkStyle}>Edit</a>
 </header>
