--- a/apps/web/src/components/ListBlog.astro
+++ b/apps/web/src/components/ListBlog.astro
@@ -9,23 +9,42 @@ import {css} from "../../styled-system/css"
                 })}>   
     
     <a href="/blog/" class={container({
-        textAlign:'center',
         mx: '16.5%',
-        py: '2.1%',
+        py: '4%',
         my: '7%',
         bg: '#0E0E0E',
-        borderRadius: 'md'
+        borderWidth: 1,
+        borderColor: '#2B334F',
+        borderRadius: 'md',
+        transition: 'all',
+        transitionTimingFunction: 'ease-out',
+        transitionDelay: '.2s',
+        '& p':{
+            transition: 'all',
+            transitionTimingFunction: 'ease-out',
+            transitionDelay: '.2s',
+        },
+        _hover:{
+            borderWidth: 1.5,
+            borderColor: '#72457B',
+            '& p':{
+                color: '#EAE1E1'
+            },
+        }
         })}>
         <p class={css({
-            mb: '5%'
+            mb: '5%',
+            textAlign:'center',
+            color: '#EAE1E1'
         })}>January, 9, 2024</p>
-        <h2 class={css({fontSize:'32',
+        <h2 class={css({fontSize:'26',
                         fontWeight:'600',
-                        mb: '5%'
+                        mb: '5%',
+                        textAlign:'center'
                         })}>
                         The world of reverse
         </h2>
-        <p>
+        <p class={css({color:'#B0B0B0'})}>
             Proprietary code is often our enemy as open source developers.
             Breaking it down and developing versions that are interoperable
             with their code is one of the great goals of the reverse engineering world.
@@ -33,24 +52,43 @@ import {css} from "../../styled-system/css"
     </a>
 
      
-    <a href="" class={container({
-        textAlign:'center',
+    <a href="/blog/" class={container({
         mx: '16.5%',
-        py: '2.1%',
+        py: '4%',
         my: '7%',
         bg: '#0E0E0E',
-        borderRadius: 'md'
+        borderWidth: 1,
+        borderColor: '#2B334F',
+        borderRadius: 'md',
+        transition: 'all',
+        transitionTimingFunction: 'ease-out',
+        transitionDelay: '.2s',
+        '& p':{
+            transition: 'all',
+            transitionTimingFunction: 'ease-out',
+            transitionDelay: '.2s',
+        },
+        _hover:{
+            borderWidth: 1.5,
+            borderColor: '#72457B',
+            '& p':{
+                color: '#EAE1E1'
+            },
+        }
         })}>
         <p class={css({
-            mb: '5%'
+            mb: '5%',
+            textAlign:'center',
+            color: '#EAE1E1'
         })}>January, 9, 2024</p>
-        <h2 class={css({fontSize:'32',
+        <h2 class={css({fontSize:'26',
                         fontWeight:'600',
-                        mb: '5%'
+                        mb: '5%',
+                        textAlign:'center'
                         })}>
                         The world of reverse
         </h2>
-        <p>
+        <p class={css({color:'#B0B0B0'})}>
             Proprietary code is often our enemy as open source developers.
             Breaking it down and developing versions that are interoperable
             with their code is one of the great goals of the reverse engineering world.
