first function post run

--- a/apps/web/src/pages/admin/auth/signin.astro
+++ b/apps/web/src/pages/admin/auth/signin.astro
@@ -1,68 +1,8 @@
 ---
-import {css} from '../../../../styled-system/css'
-import {center, flex} from '../../../../styled-system/patterns'
 import Layout from '../../../layouts/Layout.astro'
-import {request, response} from 'undici'
-import {useState} from 'react'
-
-// variable
-const [email, setEmail] = useState('')
-const [password, setPassword] = useState('')
-
-const data = {
-    email: email,
-    password: password
-}
-
-async function Submit(){
-    await request(`http://localhost:3333/json`,
-    { method: 'POST', headers: { 'content-type': 'application/json' }, body: JSON.stringify({data}) }
-  )  
-}
-
-// styles
-const styleContainer = flex({
-        direction: 'column',
-        mx: '35%',
-        alignItems: 'flex-start',
-        my: '3%'
-        })
-
-const styleLabel = css({
-        fontSize: 21,
-        mb: 2
-        })
+import SigninComponent from '../../../components/admin/signin.tsx'
 ---
 
 <Layout>
-    <center class={css({mb: '9.5%'})}>
-    <h2 class={css({
-            fontWeight: '500',
-            mt: '3%'
-            })}> 
-            Sign in
-        </h2>
-
-        <form>
-            <div class={styleContainer}>
-                <label class={styleLabel}>Adress mail</label>
-                <input placeholder="Enter your email"
-                        type="email"
-                        onChange={
-                            (e) => (setEmail(e.target.value))
-                        }/>
-            </div>
-            <div class={styleContainer}>
-                <label class={styleLabel}>Password</label>
-                <input placeholder="Enter your password"
-                        type="password"
-                        onChange={
-                            (e) => (setPassword(e.target.value))
-                        }/>
-            </div>
-            <button>
-                Sign in
-            </button>
-        </form>
-    </center>
+    <SigninComponent client:idle/>
 </Layout>
