--- a/apps/web/src/layouts/AdminLayout.astro
+++ b/apps/web/src/layouts/AdminLayout.astro
@@ -1,5 +1,5 @@
 ---
-import AdminHeader from "../components/AdminHeader.astro"
+import AdminHeader from "../components/admin/AdminHeader.astro"
 import {css} from "../../styled-system/css"
 import "../index.css"
 ---
