post data for create blog

--- a/apps/web/src/components/admin/AdminHeader.astro
+++ b/apps/web/src/components/admin/AdminHeader.astro
@@ -1,6 +1,6 @@
 ---
-import {css} from '../../styled-system/css'
-import {flex} from '../../styled-system/patterns'
+import {css} from '../../../styled-system/css'
+import {flex} from '../../../styled-system/patterns'
 
 const linkStyle = css({
     ml: '2%',
