--- a/apps/web/src/pages/admin/new/index.astro
+++ b/apps/web/src/pages/admin/new/index.astro
@@ -1,49 +1,18 @@
 ---
 import {css} from '../../../../styled-system/css'
-import {center, flex} from '../../../../styled-system/patterns'
+import {center} from '../../../../styled-system/patterns'
 import AdminLayout from '../../../layouts/AdminLayout.astro'
-
-const styleContainer = flex({
-        direction: 'column',
-        mx: '35%',
-        alignItems: 'flex-start',
-        my: '3%'
-        })
-
-const styleLabel = css({
-        fontSize: 21,
-        mb: 2
-        })
+import NewComponent from '../../../components/admin/NewComponents.tsx'
 ---
 
 <AdminLayout>
     <center>
-    <h2 class={css({
+        <h2 class={css({
             fontWeight: '500',
             mt: '3%'
             })}> 
             Create new blog
         </h2>
-
-        <form>
-            <div class={styleContainer}>
-                <label class={styleLabel}>Title</label>
-                <input placeholder="Enter your title of blog"
-                        type="text"/>
-            </div>
-            <div class={styleContainer}>
-                <label class={styleLabel}>Tags</label>
-                <input placeholder="Enter tags"
-                        type="text"/>
-            </div>
-            <div class={styleContainer}>
-                <label class={styleLabel}>Preface</label>
-                <input placeholder="Enter the preface"
-                        type="text"/>
-            </div>
-            <button>
-                Add content
-            </button>
-        </form>
+        <NewComponent client:idle />
     </center>
 </AdminLayout>
