signin account passed

--- a/apps/web/src/pages/admin/auth/signin.astro
+++ b/apps/web/src/pages/admin/auth/signin.astro
@@ -4,5 +4,5 @@ import SigninComponent from '../../../components/admin/Signin.tsx'
 ---
 
 <Layout>
-    <SigninComponent client:idle/>
+    <SigninComponent client:load/>
 </Layout>
