fixed error in api token

--- a/apps/web/src/pages/admin/auth/signup.astro
+++ b/apps/web/src/pages/admin/auth/signup.astro
@@ -2,7 +2,6 @@
 import Layout from '../../../layouts/Layout.astro'
 import SignupComponent from '../../../components/admin/Signup.tsx'
 ---
-
 <Layout>
-    <SignupComponent client:idle />
+    <SignupComponent client:load />
 </Layout>
