put data is running

--- a/apps/web/src/pages/admin/edit/[id].astro
+++ b/apps/web/src/pages/admin/edit/[id].astro
@@ -4,6 +4,8 @@ import {center, flex} from '../../../../styled-system/patterns'
 import AdminLayout from '../../../layouts/AdminLayout.astro'
 import EditFirst from '../../../components/admin/EditFirst.tsx'
 
+export const prerender = false
+
 const {id} = Astro.params
 ---
 
