edit file is running

--- a/apps/web/src/pages/admin/edit/content/[id].astro
+++ b/apps/web/src/pages/admin/edit/content/[id].astro
@@ -4,6 +4,8 @@ import {center, flex} from '../../../../../styled-system/patterns'
 import AdminLayout from '../../../../layouts/AdminLayout.astro'
 import EditSecond from '../../../../components/admin/EditSecond.tsx'
 
+export const prerender = false
+
 const styleContainer = flex({
         direction: 'column',
         mx: '35%',
