--- a/apps/web/src/pages/blog/[id].astro
+++ b/apps/web/src/pages/blog/[id].astro
@@ -4,6 +4,8 @@ import Footer from '../../components/Footer.astro'
 import {css} from '../../../styled-system/css'
 import {Content} from '../content/first.md'
 
+export const prerender = false 
+
 const styleMD = css({ color:'white',
                     mt:'4.5%',
                     mx:'20%',
@@ -23,6 +25,12 @@ const styleMD = css({ color:'white',
                         color: '#BB8FCE',
                     }
                     })
+
+const id = Astro.params
+const response = await fetch(`http://localhost:3333/blog/${id}`)
+            .then((res) => res.json())
+            .catch((err) => console.error(err))
+console.log(response)
 ---
 
 <Layout>
