--- a/apps/web/src/pages/blog/[id].astro
+++ b/apps/web/src/pages/blog/[id].astro
@@ -2,37 +2,16 @@
 import Layout from '../../layouts/Layout.astro'
 import Footer from '../../components/Footer.astro'
 import {css} from '../../../styled-system/css'
-import {Content} from '../content/first.md'
+import Content from '../../components/Content.astro'
 
 export const prerender = false 
 const {id} = Astro.params
 
 const response = await fetch(`http://localhost:3333/blog/${id}`)
-            .then((res) => res)
+            .then((res) => res.json())
             .catch((err) => console.error(err))
-console.log(response)
 
 //style
-const styleMD = css({ color:'white',
-                    mt:'4.5%',
-                    mx:'20%',
-                    lineHeight: 1.7,
-                    fontSize: 17.5,
-                    '& h2, h3, h4':{
-                        my: '4%',
-                    },
-                    '& img': {
-                        display:'block',
-                        marginLeft: 'auto',
-                        marginRight: 'auto',
-                        width:'78%',
-                        mb: '5%'
-                    },
-                    '& a':{
-                        color: '#BB8FCE',
-                    }
-                    })
-
 ---
 
 <Layout>
@@ -46,7 +25,6 @@ const styleMD = css({ color:'white',
          the great goals of the reverse engineering world.
     </p>
     </div>
-    <div class={styleMD}>
-    </div>
+    <Content data={response.content}/>
     <Footer/>
 </Layout>
